--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="star"><i class="fa-solid fa-star"></i></li>
             </div>
             <p id="para">rating</p>
-            <button class="btn">Rate</button>
+            <button class="btn">Next</button>
         </div>
     </section>
 
